--- a/frontend/Pagina-de-Administrador/k-card-ventas/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-ventas/index.html
@@ -18,13 +18,22 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href="../k-card-inicio/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
+          >
             Inicio
           </a>
-          <a class="navbar-item font" href="../k-card-photocard/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
+          >
             Photocards
           </a>
-          <a class="navbar-item font" href="../k-card-albums/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
+          >
             Albums
           </a>
           <a class="navbar-item font" href=""> Ventas </a>
