limpieza en k-card albums

--- a/frontend/Pagina-de-Administrador/k-card-albums/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/index.html
@@ -18,14 +18,23 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href="../k-card-inicio/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
+          >
             Inicio
           </a>
-          <a class="navbar-item font" href="../k-card-photocard/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
+          >
             Photocards
           </a>
           <a class="navbar-item font" href=""> Albums </a>
-          <a class="navbar-item font" href="../k-card-ventas/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
+          >
             Ventas
           </a>
         </div>
@@ -73,7 +82,9 @@
         </div>
       </div>
 
-      <a href="./k-card-album-create/index.html" class="button button-change"
+      <a
+        href="/frontend/Pagina-de-Administrador/k-card-albums/k-card-album-create/index.html"
+        class="button button-change"
         >Crear Album</a
       >
     </div>
