--- a/frontend/Pagina-de-Administrador/k-card-albums/k-card-album/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/k-card-album/index.html
@@ -19,14 +19,28 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href="../../k-card-albums/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
+          >
             Inicio
           </a>
-          <a class="navbar-item font" href="../../k-card-photocard/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
+          >
             Photocards
           </a>
-          <a class="navbar-item font" href="../index.html"> Albums </a>
-          <a class="navbar-item font" href="../../k-card-ventas/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
+          >
+            Albums
+          </a>
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
+          >
             Ventas
           </a>
         </div>
@@ -96,11 +110,6 @@
                 <input type="text" id="Company" maxlength="15" />
               </div>
 
-              <div>
-                <label for="Country">País</label>
-                <input type="text" id="Country" maxlength="15" />
-              </div>
-
               <button class="button-change modal-button" type="submit">
                 Guardar Cambios
               </button>
@@ -108,7 +117,6 @@
           </div>
         </div>
       </div>
-
       <button class="modal-close is-large" aria-label="close"></button>
     </div>
     <div
