limpieza en k-card photocard

--- a/frontend/Pagina-de-Administrador/k-card-photocard/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-photocard/index.html
@@ -18,12 +18,25 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href="../k-card-inicio/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
+          >
             Inicio
           </a>
           <a class="navbar-item font" href=""> Photocards </a>
-          <a class="navbar-item font" href="../k-card-albums/"> Albums </a>
-          <a class="navbar-item font" href=""> Ventas </a>
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
+          >
+            Albums
+          </a>
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
+          >
+            Ventas
+          </a>
         </div>
       </div>
     </nav>
@@ -74,7 +87,7 @@
         </div>
       </div>
       <a
-        href="./k-card-photocard-create/index.html"
+        href="/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-create/index.html"
         class="button button-change"
         >Crear Photocard</a
       >
