--- a/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard/index.html
@@ -19,14 +19,28 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href="../../k-card-albums/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
+          >
             Inicio
           </a>
-          <a class="navbar-item font" href="../../k-card-photocard/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
+          >
             Photocards
           </a>
-          <a class="navbar-item font" href="../index.html"> Albums </a>
-          <a class="navbar-item font" href="../../k-card-ventas/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
+          >
+            Albums
+          </a>
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
+          >
             Ventas
           </a>
         </div>
@@ -34,7 +48,7 @@
     </nav>
     <div class="container color-bg">
       <div id="content">
-        <div id="container-img"><img id="imgAlbum" src="" alt="" /></div>
+        <div id="container-img"><img id="imgPhotocard" src="" alt="" /></div>
         <div class="detail-table">
           <div class="title-table">DETALLE DEL ALBUM</div>
           <table>
