--- a/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-update/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-update/index.html
@@ -17,14 +17,28 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href="../../k-card-inicio/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
+          >
             Inicio
           </a>
-          <a class="navbar-item font" href="../index.html"> Photocards </a>
-          <a class="navbar-item font" href="../../k-card-albums/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
+          >
+            Photocards
+          </a>
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
+          >
             Albums
           </a>
-          <a class="navbar-item font" href="../../k-card-ventas/index.html">
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
+          >
             Ventas
           </a>
         </div>
