correcion en sign in

--- a/frontend/Pagina-de-usuario/k-card-inicio/sign-in-page/index.html
+++ b/frontend/Pagina-de-usuario/k-card-inicio/sign-in-page/index.html
@@ -19,26 +19,9 @@
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item font"> Inicio </a>
-          <a
-            id="buttonNavPhotocards"
-            class="navbar-item font"
-            href="/frontend/Pagina-de-usuario/k-card-photocards/index.html"
-          >
-            Photocards
-          </a>
-          <a
-            id="buttonNavAlbums"
-            class="navbar-item font"
-            href="/frontend/Pagina-de-usuario/k-card-albums/index.html"
-          >
-            Albums
-          </a>
-          <a
-            id="buttonNavColeccion"
-            class="navbar-item font"
-            href="/frontend/Pagina-de-usuario/k-card-coleccion/index.html"
-            >Coleccion</a
-          >
+          <a id="buttonNavPhotocards" class="navbar-item font"> Photocards </a>
+          <a id="buttonNavAlbums" class="navbar-item font"> Albums </a>
+          <a id="buttonNavColeccion" class="navbar-item font">Coleccion</a>
         </div>
       </div>
     </nav>
@@ -52,7 +35,7 @@
         <div>
           <label for="password">Contraseña</label>
           <input
-            type="text"
+            type="password"
             id="password"
             minlength="6"
             maxlength="20"
@@ -66,7 +49,7 @@
           <input type="text" id="phoneNumber" maxlength="30" required />
         </div>
 
-        <button id="button" type="submit">Guardar Cambios</button>
+        <button id="button" type="submit">Crear Usuario</button>
         <h2 class="title-form">
           Si ya tiene una cuenta
           <a
