correccion de algunas fallas

--- a/frontend/Pagina-de-usuario/k-card-photocards/index.html
+++ b/frontend/Pagina-de-usuario/k-card-photocards/index.html
@@ -20,23 +20,22 @@
         <div class="navbar-start">
           <a
             class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
+            href="/frontend/Pagina-de-usuario/k-card-inicio/index.html"
           >
             Inicio
           </a>
-          <a class="navbar-item font" href=""> Photocards </a>
+          <a class="navbar-item font"> Photocards </a>
           <a
             class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
+            href="/frontend/Pagina-de-usuario/k-card-albums/index.html"
           >
             Albums
           </a>
           <a
             class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
+            href="/frontend/Pagina-de-usuario/k-card-coleccion/index.html"
+            >Coleccion</a
           >
-            Ventas
-          </a>
         </div>
         <div id="containerActions" class="navbar-end">
           <a
