--- a/frontend/Pagina-de-usuario/k-card-coleccion/index.html
+++ b/frontend/Pagina-de-usuario/k-card-coleccion/index.html
@@ -24,7 +24,12 @@
           >
             Inicio
           </a>
-          <a class="navbar-item font"> Photocards </a>
+          <a
+            class="navbar-item font"
+            href="/frontend/Pagina-de-usuario/k-card-photocards/index.html"
+          >
+            Photocards
+          </a>
           <a
             class="navbar-item font"
             href="/frontend/Pagina-de-usuario/k-card-albums/index.html"
@@ -51,7 +56,7 @@
       </div>
     </nav>
     <div class="container-button">
-      <h2 class="title-pag">Photocards</h2>
+      <h2 class="title-pag">Coleccion de Photocards</h2>
       <div class="is-flex">
         <div class="dropdown custom-dropdown">
           <div
