algunos arreglos y albums ya tiene precio

--- a/frontend/Pagina-de-Administrador/k-card-albums/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/index.html
@@ -61,6 +61,8 @@
               <select name="order-by" id="order-by" class="custom-select">
                 <option selected value="NameA-Z">Nombre (A-Z)</option>
                 <option value="NameZ-A">Nombre (Z-A)</option>
+                <option value="priceLowHigh">Precio (menor a mayor)</option>
+                <option value="priceHighLow">Precio (mayor a menor)</option>
               </select>
               <span class="dropdown-title">Filtrar los Albums por</span>
               <select
