--- a/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-create/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-create/index.html
@@ -73,7 +73,7 @@
           </select>
         </div>
 
-        <button id="button" type="submit">Guardar Cambios</button>
+        <button id="button" type="submit">Crear Photocard</button>
       </form>
       <div
         id="container-card"
