--- a/frontend/Pagina-de-Administrador/k-card-photocard/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-photocard/index.html
@@ -57,7 +57,7 @@
           </div>
           <div class="dropdown-menu" id="dropdown-menu" role="menu">
             <div class="dropdown-content filter-content">
-              <span class="dropdown-title">Ordenar los Albums por:</span>
+              <span class="dropdown-title">Ordenar las Photocards por:</span>
               <select name="order-by" id="order-by" class="custom-select">
                 <option selected value="NameA-Z">Nombre (A-Z)</option>
                 <option value="NameZ-A">Nombre (Z-A)</option>
@@ -65,22 +65,13 @@
                 <option value="priceHighLow">Precio (mayor a menor)</option>
               </select>
 
-              <span class="dropdown-title">Filtrar los Albums por</span>
+              <span class="dropdown-title">Filtrar las Photocards por</span>
               <select
                 name="filter-by"
                 id="filter-by-group"
                 class="custom-select"
               >
                 <option selected value="">Grupo</option>
-              </select>
-              <select
-                name="filter-by"
-                id="filter-by-availability"
-                class="custom-select"
-              >
-                <option selected value="">Disponibilidad</option>
-                <option value="Disponible">Disponible</option>
-                <option value="Vendida">Vendida</option>
               </select>
             </div>
           </div>
