--- a/frontend/Pagina-de-usuario/k-card-albums/k-card-album/index.html
+++ b/frontend/Pagina-de-usuario/k-card-albums/k-card-album/index.html
@@ -82,6 +82,10 @@
               <td>País</td>
               <td id="country"></td>
             </tr>
+            <tr>
+              <td>Precio</td>
+              <td id="price"></td>
+            </tr>
           </table>
         </div>
       </div>
