--- a/frontend/Pagina-de-Administrador/k-card-inicio/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/index.html
@@ -19,46 +19,37 @@
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item font" href=""> Inicio </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
-          >
+          <a class="navbar-item font" href="./k-card-photocard/index.html">
             Photocards
           </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
-          >
+          <a class="navbar-item font" href="./k-card-albums/index.html">
             Albums
           </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
-          >
+          <a class="navbar-item font" href="./k-card-ventas/index.html">
             Ventas
           </a>
         </div>
       </div>
     </nav>
     <div class="container-img">
-      <img src="/images/resources/logopagina.jpeg" alt="" />
+      <img src="./images/resources/logopagina.jpeg" alt="" />
     </div>
 
     <div class="container">
       <div class="notification bg-color mt-2">
         <a
           class="button is-medium is-fullwidth button-change"
-          href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
+          href="./k-card-photocard/index.html"
           >Photocards</a
         >
         <a
           class="button is-medium is-fullwidth button-change"
-          href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
+          href="./k-card-albums/index.html"
           >Albums</a
         >
         <a
           class="button is-medium is-fullwidth button-change"
-          href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
+          href="./k-card-ventas/index.html"
           >Ventas</a
         >
       </div>
