--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/index.html
@@ -18,23 +18,12 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
-          >
-            Inicio
-          </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
-          >
+          <a class="navbar-item font" href="../index.html"> Inicio </a>
+          <a class="navbar-item font" href="../k-card-photocard/index.html">
             Photocards
           </a>
-          <a class="navbar-item font" href=""> Albums </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
-          >
+          <a class="navbar-item font" href="#"> Albums </a>
+          <a class="navbar-item font" href="../k-card-ventas/index.html">
             Ventas
           </a>
         </div>
@@ -84,9 +73,7 @@
         </div>
       </div>
 
-      <a
-        href="/frontend/Pagina-de-Administrador/k-card-albums/k-card-album-create/index.html"
-        class="button button-change"
+      <a href="./k-card-album-create/index.html" class="button button-change"
         >Crear Album</a
       >
     </div>
