--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/k-card-album-update/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/k-card-album-update/index.html
@@ -17,28 +17,12 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
-          >
-            Inicio
-          </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
-          >
+          <a class="navbar-item font" href="../../index.html"> Inicio </a>
+          <a class="navbar-item font" href="../../k-card-photocard/index.html">
             Photocards
           </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
-          >
-            Albums
-          </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
-          >
+          <a class="navbar-item font" href="../index.html"> Albums </a>
+          <a class="navbar-item font" href="../../k-card-ventas/index.html">
             Ventas
           </a>
         </div>
@@ -80,7 +64,7 @@
       >
         <img
           id="cardImage"
-          src="/images/resources/no-img.jpeg"
+          src="../../images/resources/no-img.jpeg"
           alt=""
           class="card-img"
         />
