--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-photocard/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-photocard/index.html
@@ -18,23 +18,12 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
-          >
-            Inicio
-          </a>
-          <a class="navbar-item font" href=""> Photocards </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
-          >
+          <a class="navbar-item font" href="../index.html"> Inicio </a>
+          <a class="navbar-item font" href="#"> Photocards </a>
+          <a class="navbar-item font" href="../k-card-albums/index.html">
             Albums
           </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
-          >
+          <a class="navbar-item font" href="../k-card-ventas/index.html">
             Ventas
           </a>
         </div>
@@ -78,7 +67,7 @@
         </div>
       </div>
       <a
-        href="/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-create/index.html"
+        href="./k-card-photocard-create/index.html"
         class="button button-change"
         >Crear Photocard</a
       >
