--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-photocard/k-card-photocard/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-photocard/k-card-photocard/index.html
@@ -19,28 +19,12 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-inicio/index.html"
-          >
-            Inicio
-          </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-photocard/index.html"
-          >
-            Photocards
-          </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-albums/index.html"
-          >
+          <a class="navbar-item font" href="../../index.html"> Inicio </a>
+          <a class="navbar-item font" href="../index.html"> Photocards </a>
+          <a class="navbar-item font" href="../../k-card-albums/index.html">
             Albums
           </a>
-          <a
-            class="navbar-item font"
-            href="/frontend/Pagina-de-Administrador/k-card-ventas/index.html"
-          >
+          <a class="navbar-item font" href="../../k-card-ventas/index.html">
             Ventas
           </a>
         </div>
