Reordenamiento de las carpetas dentro de pagina de usuario para poder correr en http server, y algunos cambios en db.sql de los insert into

--- a/frontend/Pagina-de-usuario/k-card-inicio/index.html
+++ b/frontend/Pagina-de-usuario/k-card-inicio/index.html
@@ -27,26 +27,26 @@
           <a
             id="buttonNavLogIn"
             class="navbar-item font"
-            href="/frontend/Pagina-de-usuario/k-card-inicio/login-page/index.html"
+            href="./login-page/index.html"
           >
             Iniciar Sesion
           </a>
           <a
-            id="buttonNavSignIn"
+            id="buttonNavSignUp"
             class="navbar-item font"
-            href="/frontend/Pagina-de-usuario/k-card-inicio/sign-in-page/index.html"
+            href="./sign-up-page/index.html"
           >
             Registrarse
           </a>
-          <a
-            id="cartLink"
-            href="/frontend/Pagina-de-usuario/k-card-carrito/index.html"
-          ></a>
+          <a id="cartLink" href="./k-card-carrito/index.html"></a>
         </div>
       </div>
     </nav>
     <div class="container-img">
-      <img src="/images/resources/logopagina.jpeg" alt="" />
+      <img
+        src="../../Pagina-de-Administrador/k-card-inicio/images/resources/logopagina.jpeg"
+        alt=""
+      />
     </div>
 
     <div class="container">
@@ -54,19 +54,19 @@
         <a
           id="buttonBodyPhotocards"
           class="button is-medium is-fullwidth button-change"
-          href="/frontend/Pagina-de-usuario/k-card-photocards/index.html"
+          href="#"
           >Photocards</a
         >
         <a
           id="buttonBodyAlbums"
           class="button is-medium is-fullwidth button-change"
-          href="/frontend/Pagina-de-usuario/k-card-albums/index.html"
+          href="#"
           >Albums</a
         >
         <a
           id="buttonBodyColeccion"
           class="button is-medium is-fullwidth button-change"
-          href="/frontend/Pagina-de-usuario/k-card-coleccion/index.html"
+          href="#"
           >Coleccion</a
         >
       </div>
