correcion de errores en el post y path desde el front

--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/k-card-album/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/k-card-album/index.html
@@ -89,7 +89,8 @@
               <div>
                 <label for="Image"
                   >Imagen<br />
-                  Sino quiere poner una imagen escriba "sin-imagen"</label
+                  Sino quiere poner una imagen escriba "sin-imagen"<br />
+                  Las imagenes deben estar en formato .webp</label
                 >
                 <input type="text" id="Image" />
               </div>
