--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/k-card-album-create/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-albums/k-card-album-create/index.html
@@ -46,7 +46,8 @@
         <div>
           <label for="image"
             >Imagen <br />
-            Sino quiere poner una imagen escriba "sin-imagen"</label
+            Sino quiere poner una imagen escriba "sin-imagen"<br />
+            Las imagenes deben estar en formato .webp</label
           >
           <input type="text" id="image" />
         </div>
